--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,6 +23,7 @@ html,body{
     top: -1px;
     height: 50px;
     width: 100%;
+    background-color: rgb(36, 190, 131);
 }
 
 .left-cluster{
@@ -35,6 +36,11 @@ html,body{
     width: 75%;
     height: calc(#{$MyHeight} - 50px);
     background-color: rgb(177, 99, 187);
+}
+.left-cluster,.middle-img-area,.top-name{
+    border-radius: 10px;
+    box-shadow: inset 5px 5px 0px #000000,
+            inset -5px -5px 0px #000000;
 }
 
 // delete below h1
