--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -5,6 +5,10 @@
 
 </div>
 
+<div class="images">
+    <img src="https://media.istockphoto.com/photos/mountain-landscape-picture-id517188688?k=20&m=517188688&w=0&h=pCjvUkNlz9_esVvQw2Wgc8VJZBMgJrB0FQmktCA0KYY=" alt="">
+</div>
+
 <pre>
     {{a}}
 </pre>
