--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,11 +16,11 @@
                 <div class="maybe-sometin">
                     <a [routerLink]="['intro']">intro<p></p></a>
                     <a [routerLink]="['my-comp']">my-comp<p></p></a>
-                    <input type="checkbox" 
+                    <!-- <input type="checkbox" 
                     ng-checked="check">
                     <button ng-click="checkIt()" ng-model='check'>
                         Click to Check 
-                    </button>
+                    </button> -->
                 </div>
             </div>
             <div class="middle-img-area">
