--- a/src/app/collection1/collection1.component.scss
+++ b/src/app/collection1/collection1.component.scss
@@ -4,90 +4,19 @@ body{
 }
 
 .cover{
+    padding: 70px 0;
     overflow: scroll;
 }
 
 .images{
     display: flex;
     justify-content: space-evenly;
-    background-color: rgba(255, 221, 127, 0.671);
+    background-color: #7fffd4;
     backdrop-filter: blur(5px);
+    transform: rotate(25deg);
 }
 img{
     max-height: 600px;
     margin: 50px 0;
     max-width: fit-content;
 }
-
-
-// .flex-items:nth-child(1) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(2) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(3) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(4) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(5) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(6) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(7) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
-  
-//   .flex-items:nth-child(8) {
-//     display: block;
-//     flex-grow: 0;
-//     flex-shrink: 1;
-//     flex-basis: auto;
-//     align-self: auto;
-//     order: 0;
-//   }
